added projects route, updated swagger with jwt
