# middleware/authMiddleware.ts
@@ -8,7 +8,7 @@ const db = require('../models');
 const User = db.user;
 
 
-const protect = async (req: any, res: Response, next: NextFunction) => {
+const protect = async (req: Request, res: Response, next: NextFunction) => {
     let token
 
     if(req.headers.authorization && req.headers.authorization.startsWith('Bearer')) {
@@ -20,7 +20,7 @@ const protect = async (req: any, res: Response, next: NextFunction) => {
             const decoded: any = jwt.verify(token, process.env.JWT_SECRET!)
 
             // Get user from the token
-            req.user = await User.findById(decoded.id).select('-password')
+            req.params.user_id = await User.findById(decoded.id).select('-password')
 
             next()
         } catch (error) {
@@ -31,6 +31,7 @@ const protect = async (req: any, res: Response, next: NextFunction) => {
 
     if(!token) {
         res.status(401).send({message: 'Not authorized, no token'})
+        return
     }
 }
 
