# models/index.ts
@@ -6,6 +6,7 @@ mongoose.Promise = global.Promise;
 const db = {
     'mongoose': mongoose,
     'url': process.env.MONGODB_URI,
-    'user': require('./user')(mongoose)};
+    'user': require('./user')(mongoose),
+    'projects': require('./projects')(mongoose)};
 
 module.exports = db;
