# routes/index.ts
@@ -5,5 +5,6 @@ const mainController = require('../controllers');
 router.get('/', mainController.getMain);
 
 router.use('/user', require('./user'));
+router.use('/projects', require('./projects'));
 
 module.exports = router;
