# routes/user.ts
@@ -5,12 +5,12 @@ const usersController = require('../controllers/user');
 
 import protect from '../middleware/authMiddleware';
 
-router.get('/', usersController.getAll);
+router.get('/all', protect, usersController.getAll);
 router.post('/', usersController.insertUser);
 router.post('/login', usersController.userLogin);
 
-router.get('/:user_id', usersController.getSingle);
-router.put('/:user_id', usersController.updateUser);
-router.delete('/:user_id', usersController.deleteUser);
+router.get('/', protect, usersController.getSingle);
+router.put('/', protect, usersController.updateUser);
+router.delete('/', protect, usersController.deleteUser);
 
 module.exports = router;
